# sf1r-lite

./: .gitignore  .gitmodules  LICENSE  README.md  Rakefile  compile_all.sh  resource_config.yml  update-resource-push.sh  update-resource.sh
source/: CMakeLists.txt  ConfigureChecks.cmake  Packaging-code.cmake  Packaging.cmake  driver.doxygen.in
source/bundles/: CMakeLists.txt
source/core/: CMakeLists.txt  config.h.in
source/generators/: driver_keys.rb  router_initializer.rb  router_initializer.yml
source/process/: CMakeLists.txt  CobraMain.cpp  CobraProcess.cpp  CobraProcess.h  DistributeDataMigrateTool.cpp  DocManagerDump.cpp  ImgDupMain.cpp  LogServerMain.cpp
source/tools/: CMakeLists.txt
test/: CMakeLists.txt  TestHelper.h  TestResources.h.cmake  TestRunner.inl
test/aggregator-manager/: CMakeLists.txt  Runner.cpp  t_SequenceMerger.cpp
test/b5m-manager/: CMakeLists.txt  README  Runner.cpp  address_normalize_server.cc  b5m_categorizing.cc  b5m_category_mapper.cc  b5m_commentdb.cc  b5m_extract_keyword.cc  b5m_matcher.cc  b5m_offer_db_recorder.cc  b5m_offerdb.cc  b5m_product_db.cc  b5m_product_matcher.cc  b5m_psm.cc  b5m_scd_doc_processor.cc  b5m_search_keyword.cc  categorize_test.cc  category_test_file  getSearchKeywords_test_file  image_upload.cpp  keyword_found_test.cc  keywords_test.cc  process_test_file  simhash_train_id.cc  spu_match_test.cc  t_b5mo_processor.cc  t_commentdb.cc  t_offer_db_recorder.cc  t_offerdb.cc  t_product_db.cc  t_product_matcher.cc  t_scd_doc_processor.cc  test_config
test/common/: CMakeLists.txt  ClickCounterDBTestFixture.cpp  ClickCounterDBTestFixture.h  Command.hpp  FileMonitorTestFixture.cpp  FileMonitorTestFixture.h  Runner.cpp  ScdBuilder.h  ScdIndexUtils.hpp  ScdMergeTool.cpp  ScdMerger.cpp  ScdParserPerformance.cpp  Timer.hpp  t_ByteSizeParser.cpp  t_ClickCounterDB.cpp  t_FileMonitor.cpp  t_ProductTokenizer.cpp  t_QueryNormalizer.cpp  t_SDBWrapper.cpp  t_ScdIndex.cpp  t_ScdIndexLeveldb.cpp  t_ScdIndexTable.cpp  t_ScdParser.cpp  t_Utilities.cpp  t_pairwise_scd_meger.cpp  t_scd_type_writer.cpp
test/configuration-manager/: CMakeLists.txt  Runner.cpp  t_Acl.cpp  t_BrokerAgentConfig.cpp  t_CollectionMeta.cpp  t_CollectionPath.cpp  t_ConfigurationTool.cpp  t_LAConfigUnit.cpp  t_PropertyConfig.cpp
test/document-manager/: CMakeLists.txt  Runner.cpp  t_DocumentManager.cpp
test/img-dup-detector/: CMakeLists.txt  t_img_dup_detector.cpp
test/license-manager/: CMakeLists.txt  Runner.cpp  t_LicenseClient.cpp  t_LicenseEncryptor.cpp  t_LicenseRequestFileGenerator.cpp  t_LicenseTool.cpp
test/log-manager/: CMakeLists.txt  RpcConnectionTestFixture.cpp  RpcConnectionTestFixture.h  RpcTestServer.cpp  RpcTestServer.h  Runner.cpp  def.hpp  t_Drum.cpp  t_HistoryDB.cpp  t_ItemLogger.cpp  t_LogManager.cpp  t_LogServerConnection.cpp  t_OrderLogger.cpp  t_RpcServerConnection.cpp
test/mining-manager/: CMakeLists.txt  FContainerTestFixture.cpp  FContainerTestFixture.h  GroupLabelLoggerTestFixture.cpp  GroupLabelLoggerTestFixture.h  GroupManagerTestFixture.cpp  GroupManagerTestFixture.h  MerchantScoreManagerTestFixture.cpp  MerchantScoreManagerTestFixture.h  NumericPropertyScorerTestFixture.cpp  NumericPropertyScorerTestFixture.h  NumericPropertyTableBuilderStub.cpp  NumericPropertyTableBuilderStub.h  ProductRankerTestFixture.cpp  ProductRankerTestFixture.h  ProductScoreAverageTestFixture.cpp  ProductScoreAverageTestFixture.h  ProductScoreManagerTestFixture.cpp  ProductScoreManagerTestFixture.h  ProductScorerStub.h  PropIdTableTestFixture.cpp  PropIdTableTestFixture.h  RandomScorer.cpp  RandomScorer.h  RandomScorerFactory.cpp  RandomScorerFactory.h  dd_group_gen.cc  t_AttrManager.cpp  t_AutofillManager.cpp  t_CustomRankManager.cpp  t_DateGroupTable.cpp  t_DateStrParser.cpp  t_GroupLabelLogger.cpp  t_GroupManager.cpp  t_MerchantScoreManager.cpp  t_NumericPropertyScorer.cpp  t_ProductRanker.cpp  t_ProductScoreAverage.cpp  t_ProductScoreManager.cpp  t_ProductTokenizer.cpp  (+9 more)
test/node-manager/: CMakeLists.txt  Runner.cpp  t_node_manager.cpp  t_node_manager_manual.cpp  t_request_log.cpp  t_scd_sharding.cpp
test/osaca-test/: CMakeLists.txt  t_osaca_test.cpp
test/product-manager/: CMakeLists.txt  Runner.cpp  pm_test_parser.h  pm_test_runner.h  product_fp.cc  t_data_source.cc  t_product_manager.cc  t_product_price.cc
test/query-manager/: CMakeLists.txt  Runner.cpp  t_QueryParser.cpp  t_QueryParserCrash.cpp  t_SearchKeywordOperation.cpp  test_def.cpp  test_def.h
test/ranking-manager/: CMakeLists.txt  Runner.cpp  t_QueryGlobalAttributes.cpp  t_RankQueryProperty.cpp  t_TermFreqsOrPositionsVector.cpp
test/recommend-manager/: CMakeLists.txt  CartManagerTestFixture.cpp  CartManagerTestFixture.h  EventManagerTestFixture.cpp  EventManagerTestFixture.h  ItemIdGeneratorTestFixture.cpp  ItemIdGeneratorTestFixture.h  ItemManagerTestFixture.cpp  ItemManagerTestFixture.h  OrderManagerTestFixture.cpp  OrderManagerTestFixture.h  PurchaseManagerTestFixture.cpp  PurchaseManagerTestFixture.h  RateManagerTestFixture.cpp  RateManagerTestFixture.h  RecommendStorageTestFixture.cpp  RecommendStorageTestFixture.h  RemoteItemIdGeneratorTestFixture.cpp  RemoteItemIdGeneratorTestFixture.h  RemoteItemManagerTestFixture.cpp  RemoteItemManagerTestFixture.h  Runner.cpp  SearchMasterAddressFinderStub.h  SearchMasterItemManagerTestFixture.cpp  SearchMasterItemManagerTestFixture.h  UserManagerTestFixture.cpp  UserManagerTestFixture.h  VisitManagerTestFixture.cpp  VisitManagerTestFixture.h  t_CartManager.cpp  t_EventManager.cpp  t_IDGenerator.cpp  t_ItemIdGenerator.cpp  t_ItemManager.cpp  t_OrderManager.cpp  t_PurchaseManager.cpp  t_RandGenerator.cpp  t_RateManager.cpp  t_UserIdGenerator.cpp  t_UserManager.cpp  (+2 more)
test/search-manager/: CMakeLists.txt  Makefile  Runner.cpp  t_AllDocumentIterator.cpp  t_AndDocumentIterator.cpp  t_CustomRanker.cpp  t_ExactPhraseDocumentIterator.cpp  t_FilterDocumentIterator.cpp  t_MockIndexReader.cpp  t_NearbyPhraseDocumentIterator.cpp  t_OrDocumentIterator.cpp  t_OrderedPhraseDocumentIterator.cpp  t_PhraseDocumentIterator.cpp  t_Sorter.cpp  (+5 more)
(+1959 files in other folders)
